crates/reinhardt-core/macros/tests/ui/dto/fail/unit_struct_rejected.rs
//! Verifies that `#[dto]` rejects unit structs before emitting derives.

use reinhardt_macros::dto;

#[dto]
pub struct UnitDto;

fn main() {}
